--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -10,12 +10,20 @@
         <th>Title</th>
         <th>Content</th>
     </tr>
-    <tr th:each="question : ${questions}">
+    <tr th:each="question : ${questionsPage.content}">
         <td th:text="${question.title}"></td>
         <td th:text="${question.content}"></td>
         <td><a th:href="@{/questions/{id}(id=${question.id})}">View Details</a></td>
     </tr>
 </table>
 <a href="/questions/new">Ask a new question</a>
+
+<div th:if="${questionsPage.totalPages > 1}">
+    <ul>
+        <li th:each="pageNumber : ${#numbers.sequence(0, questionsPage.totalPages - 1)}">
+            <a th:href="@{/questions(page=${pageNumber})}" th:text="${pageNumber + 1}"></a>
+        </li>
+    </ul>
+</div>
 </body>
 </html>
