--- a/src/main/resources/templates/new_question.html
+++ b/src/main/resources/templates/new_question.html
@@ -1,16 +1,24 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link href="/bootstrap-5.3.3-dist/css/bootstrap.css" rel="stylesheet">
+    <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
     <title>New Question</title>
 </head>
 <body>
-<h1>New Question</h1>
-<form action="#" th:action="@{/questions}" method="post">
-    <label for="title">Title:</label><br>
-    <input type="text" id="title" name="title"><br>
-    <label for="content">Content:</label><br>
-    <textarea id="content" name="content"></textarea><br>
-    <input type="submit" value="Submit">
-</form>
+<div class="container">
+    <h1 class="mt-4 mb-4">New Question</h1>
+    <form action="#" th:action="@{/questions}" method="post" class="mb-4">
+        <div class="mb-3">
+            <label for="title" class="form-label">Title:</label>
+            <input type="text" id="title" name="title" class="form-control">
+        </div>
+        <div class="mb-3">
+            <label for="content" class="form-label">Content:</label>
+            <textarea id="content" name="content" class="form-control"></textarea>
+        </div>
+        <input type="submit" value="Submit" class="btn btn-primary">
+    </form>
+</div>
 </body>
 </html>
