--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -1,21 +1,31 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
+    <link href="/bootstrap-5.3.3-dist/css/bootstrap.css" rel="stylesheet">
+    <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
     <title>Question Detail</title>
 </head>
 <body>
-<h1>Question Detail</h1>
-<h2 th:text="${question.title}"></h2>
-<p th:text="${question.content}"></p>
-<h3>Answers</h3>
-<div th:each="answer : ${question.answers}">
-    <p th:text="${answer.content}"></p>
+<div class="container">
+    <h1 class="mt-4 mb-4">Question Detail</h1>
+    <h2 class="mb-3 display-4" th:text="${question.title}"></h2>
+    <p class="lead" th:text="${question.content}"></p>
+    <h3 class="mt-4 mb-3 display-6">Answers</h3>
+    <div th:each="answer : ${question.answers}" class="mb-2">
+        <div class="card">
+            <div class="card-body">
+                <p class="card-text" th:text="${answer.content}"></p>
+            </div>
+        </div>
+    </div>
+    <h3 class="mt-4 mb-3">Post an Answer</h3>
+    <form action="#" th:action="@{/answers}" method="post" class="mb-4">
+        <div class="mb-3">
+            <textarea id="content" name="content" class="form-control"></textarea>
+        </div>
+        <input type="hidden" th:value="${question.id}" name="question_id">
+        <input type="submit" value="Submit" class="btn btn-primary">
+    </form>
 </div>
-<h3>Post an Answer</h3>
-<form action="#" th:action="@{/answers}" method="post">
-    <textarea id="content" name="content"></textarea><br>
-    <input type="hidden" th:value="${question.id}" name="question_id">
-    <input type="submit" value="Submit">
-</form>
 </body>
 </html>
