--- a/src/main/resources/templates/new_question.html
+++ b/src/main/resources/templates/new_question.html
@@ -6,6 +6,7 @@
     <title>New Question</title>
 </head>
 <body>
+<div th:replace="fragments :: appbar"></div>
 <div class="container">
     <h1 class="mt-4 mb-4">New Question</h1>
     <form action="#" th:action="@{/questions}" method="post" class="mb-4">
