--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -6,6 +6,7 @@
     <title>Question Detail</title>
 </head>
 <body>
+<div th:replace="fragments :: appbar"></div>
 <div class="container">
     <h1 class="mt-4 mb-4">Question Detail</h1>
     <h2 class="mb-3 display-4" th:text="${question.title}"></h2>
