add comments for controller, service, template

--- a/src/main/resources/templates/fragments.html
+++ b/src/main/resources/templates/fragments.html
@@ -5,6 +5,7 @@
     <script src="/bootstrap-5.3.3-dist/js/bootstrap.bundle.js"></script>
 </head>
 <body>
+<!-- 반복적으로 사용하는 네비게이션 바를 프래그먼트로 분리 -->
 <div th:fragment="appbar">
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container-fluid">
