--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,6 +8,7 @@
 <body>
 <div class="container">
     <h1 class="mt-4 mb-4">Login</h1>
+    <!-- "/login" URL POST 요청 전송 -->
     <form th:action="@{/login}" method="post" class="mb-4">
         <div class="mb-3">
             <label for="username" class="form-label">Username:</label>
