--- a/src/main/resources/templates/question_detail.html
+++ b/src/main/resources/templates/question_detail.html
@@ -20,6 +20,7 @@
         </div>
     </div>
     <h3 class="mt-4 mb-3">Post an Answer</h3>
+    <!-- "/answers" URL POST 요청 전송. -->
     <form action="#" th:action="@{/answers}" method="post" class="mb-4">
         <div class="mb-3">
             <textarea id="content" name="content" class="form-control"></textarea>
