--- a/src/main/resources/templates/questions.html
+++ b/src/main/resources/templates/questions.html
@@ -6,6 +6,7 @@
     <title>Question List</title>
 </head>
 <body>
+<!-- "questionsPage.content"의 각 요소에 대해 "question" 변수 생성 -->
 <div th:replace="fragments :: appbar"></div>
 <div class="container">
     <h1 class="mt-4 mb-4">Question List</h1>
